<resources>
    <string name="app_name">Note App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Management System</string>
    <string name="nav_header_subtitle">thanh270499@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="menu_account">Account</string>
    <string name="menu_edit">Edit Profile</string>
    <string name="menu_changepw">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Edit Profile</string>
</resources>